# uniq-plus-data-quantity-noise-qsar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GETTING_STARTED.md  LESSONS_LEARNED.md  OLD_PROJECT_PLAN.md  OLD_ROADMAP.md  PIPELINE.mmd  PROJECT_PLAN.md  README.md  ROADMAP.md  SYNCHRONIZATIONS.md  agent_coding_guide.md  notes  pyproject.toml  skills-lock.json
.claude/commands/: SKILLS-SOURCES.md  changelog-gen.md  concept-spec.md  doc-health.md  plan-feature.md  sync-flow.md  teach.md
.claude/skills/: molecular-dynamics
.git-hooks/: strip_notebook_outputs.py
antigravity_cli_reviews/: phase_1a_review.md
data/: 10822_2022_478_MOESM2_ESM.csv
data/processed/: learning_curve_results.csv  noise_injection_results.csv  section4_paper_recreation_results.csv  section4_test_predictions.pkl
docs/: agentic-framework-guide.md
notebooks/: 01.5_adme_biogen_public_recreation.ipynb  01_adme_eda_baseline.ipynb  02_eda_baseline_pde10a.ipynb  03_adme_experiments.ipynb
notebooks/archive/: 01_adme_eda_baseline.ipynb  02_eda_baseline_pde10a.ipynb  03_adme_experiments.ipynb
src/: CLAUDE.md
src/RDKit_descriptors/: MDlist.py
src/cleaning/: CLAUDE.md  __init__.py  cleaning.py
src/eda/: CLAUDE.md  __init__.py  eda.py
src/features/: CLAUDE.md  __init__.py  features.py
src/hyperparams/: __init__.py  hyperparams.py
src/metrics/: __init__.py  metrics.py
src/models/: CLAUDE.md  __init__.py  models.py
src/noise/: CLAUDE.md  __init__.py  noise.py
src/plotting/: CLAUDE.md  __init__.py  plotting.py
src/preprocessing/: __init__.py  preprocessing.py
src/tuning/: CLAUDE.md  (+2 more)
tests/: test_cleaning.py  test_eda.py  test_features.py  test_hyperparams.py  test_metrics.py  test_models.py  test_noise.py  test_preprocessing.py  test_splitting.py  test_tuning.py
workflow_diagrams/: 01.5_adme_biogen_public_receration.txt  03_adme_experiments.txt
(+9 files in other folders)
